--- a/sdckl-attendance-system/reports.html
+++ b/sdckl-attendance-system/reports.html
@@ -49,6 +49,9 @@
 
     <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
         <h1 class="text-3xl font-bold text-gray-900 mb-6">Attendance Reports</h1>
+        <div class="mb-4">
+            <button id="simulateAttendanceBtn" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">Simulate Attendance Records</button>
+        </div>
         <div class="bg-white rounded-lg shadow p-6">
             <table class="min-w-full divide-y divide-gray-200">
                 <thead>
@@ -74,20 +77,31 @@
             }
 
             const reportTableBody = document.getElementById('reportTableBody');
-            const attendanceRecords = getAttendanceRecords();
+            const simulateAttendanceBtn = document.getElementById('simulateAttendanceBtn');
 
-            attendanceRecords.forEach(record => {
-                const tr = document.createElement('tr');
-                tr.innerHTML = `
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">${record.studentId}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">${record.studentName}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${new Date(record.timestamp).toLocaleString()}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm ${
-                        record.status === 'Present' || record.status === 'Late' ? 'text-green-600' : 'text-red-600'
-                    }">${record.status}</td>
-                `;
-                reportTableBody.appendChild(tr);
+            function loadAttendanceRecords() {
+                const attendanceRecords = getAttendanceRecords();
+                reportTableBody.innerHTML = '';
+                attendanceRecords.forEach(record => {
+                    const tr = document.createElement('tr');
+                    tr.innerHTML = `
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">${record.studentId}</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">${record.studentName}</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${new Date(record.timestamp).toLocaleString()}</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm ${
+                            record.status === 'Present' || record.status === 'Late' ? 'text-green-600' : 'text-red-600'
+                        }">${record.status}</td>
+                    `;
+                    reportTableBody.appendChild(tr);
+                });
+            }
+
+            simulateAttendanceBtn.addEventListener('click', () => {
+                simulateAttendanceRecords();
+                loadAttendanceRecords();
             });
+
+            loadAttendanceRecords();
         });
     </script>
 </body>
