Add sdckl-attendance-system/index.html 1748848520667

--- a/sdckl-attendance-system/index.html
+++ b/sdckl-attendance-system/index.html
@@ -26,13 +26,14 @@
                         <div class="ml-10 flex items-baseline space-x-4">
                             <a href="index.html" class="bg-blue-500 text-white px-3 py-2 rounded-md text-sm font-medium">Dashboard</a>
                             <a href="attendance.html" class="text-gray-600 hover:bg-blue-500 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Attendance</a>
-                            <a href="reports.html" class="text-gray-600 hover:bg-blue-500 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Reports</a>
-                            <a href="students.html" class="text-gray-600 hover:bg-blue-500 hover:text-white px-3 py-2 rounded-md text-sm font-medium flex items-center">
-                                <i class="fas fa-user-graduate mr-2"></i> Students
-                            </a>
-                            <a href="classes.html" class="text-gray-600 hover:bg-blue-500 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Classes</a>
-                            <a href="#" data-action="logout" class="text-gray-600 hover:bg-blue-500 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Logout</a>
-                        </div>
+            <a href="reports.html" class="text-gray-600 hover:bg-blue-500 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Reports</a>
+            <a href="students.html" class="text-gray-600 hover:bg-blue-500 hover:text-white px-3 py-2 rounded-md text-sm font-medium flex items-center">
+                <i class="fas fa-user-graduate mr-2"></i> Students
+            </a>
+            <a href="classes.html" class="text-gray-600 hover:bg-blue-500 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Classes</a>
+            <!-- Removed Settings link -->
+            <a href="#" data-action="logout" class="text-gray-600 hover:bg-blue-500 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Logout</a>
+        </div>
                     </div>
                 </div>
                 <div class="hidden md:block">
@@ -65,15 +66,6 @@
                     <div>
                         <h2 class="text-xl font-semibold text-gray-900">View Reports</h2>
                         <p class="text-gray-600">Attendance reports and analytics</p>
-                    </div>
-                </div>
-            </a>
-            <a href="settings.html" class="bg-white rounded-lg shadow p-6 hover:shadow-lg transition duration-300">
-                <div class="flex items-center">
-                    <i class="fas fa-cogs text-4xl text-yellow-600 mr-4"></i>
-                    <div>
-                        <h2 class="text-xl font-semibold text-gray-900">Settings</h2>
-                        <p class="text-gray-600">Configure system preferences</p>
                     </div>
                 </div>
             </a>
