--- a/sdckl-attendance-system/students.html
+++ b/sdckl-attendance-system/students.html
@@ -14,31 +14,31 @@
     </style>
     <script src="js/main.js" defer></script>
 </head>
-<body class="bg-gray-100">
-    <nav class="bg-white shadow-lg">
+<body class="bg-white">
+    <nav class="bg-red-700 shadow-lg">
         <div class="max-w-7xl mx-auto px-4">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
                     <div class="flex-shrink-0">
-                        <span class="text-2xl font-bold text-blue-600">SDCKL</span>
+                        <span class="text-2xl font-bold text-white">SDCKL</span>
                     </div>
                     <div class="hidden md:block">
                         <div class="ml-10 flex items-baseline space-x-4">
-                            <a href="index.html" class="text-gray-600 hover:bg-blue-500 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Dashboard</a>
-                            <a href="attendance.html" class="text-gray-600 hover:bg-blue-500 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Attendance</a>
-                            <a href="reports.html" class="text-gray-600 hover:bg-blue-500 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Reports</a>
-                            <a href="students.html" class="bg-blue-500 text-white px-3 py-2 rounded-md text-sm font-medium flex items-center">
+                            <a href="index.html" class="text-white hover:bg-red-600 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Dashboard</a>
+                            <a href="attendance.html" class="text-white hover:bg-red-600 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Attendance</a>
+                            <a href="reports.html" class="text-white hover:bg-red-600 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Reports</a>
+                            <a href="students.html" class="bg-white text-red-700 px-3 py-2 rounded-md text-sm font-medium flex items-center">
                                 <i class="fas fa-user-graduate mr-2"></i> Students
                             </a>
-                            <a href="classes.html" class="text-gray-600 hover:bg-blue-500 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Classes</a>
+                            <a href="classes.html" class="text-white hover:bg-red-600 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Classes</a>
                             <!-- Removed Settings link -->
-                            <a href="#" data-action="logout" class="text-gray-600 hover:bg-blue-500 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Logout</a>
+                            <a href="#" data-action="logout" class="text-white hover:bg-red-600 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Logout</a>
                         </div>
                     </div>
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-4 flex items-center md:ml-6">
-                        <a href="login.html" class="text-gray-600 hover:text-blue-500">
+                        <a href="login.html" class="text-white hover:text-red-300">
                             <i class="fas fa-user-circle text-2xl"></i>
                         </a>
                     </div>
@@ -48,34 +48,35 @@
     </nav>
 
     <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
-        <h1 class="text-3xl font-bold text-gray-900 mb-6">Manage Students</h1>
-        <div class="bg-white rounded-lg shadow p-6 mb-6">
+        <h1 class="text-3xl font-bold text-red-700 mb-6">Manage Students</h1>
+        <div class="bg-red-100 rounded-lg shadow p-6 mb-6">
             <form id="studentForm" class="space-y-4">
                 <div>
-                    <label for="studentId" class="block text-sm font-medium text-gray-700">Student ID</label>
-                    <input type="text" id="studentId" name="studentId" required class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" />
+                    <label for="studentId" class="block text-sm font-medium text-red-700">Student ID</label>
+                    <input type="text" id="studentId" name="studentId" required class="mt-1 block w-full border border-red-300 rounded-md shadow-sm p-2" />
                 </div>
                 <div>
-                    <label for="studentName" class="block text-sm font-medium text-gray-700">Student Name</label>
-                    <input type="text" id="studentName" name="studentName" required class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" />
+                    <label for="studentName" class="block text-sm font-medium text-red-700">Student Name</label>
+                    <input type="text" id="studentName" name="studentName" required class="mt-1 block w-full border border-red-300 rounded-md shadow-sm p-2" />
                 </div>
                 <div>
-                    <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">Add Student</button>
+                    <button type="submit" class="bg-red-700 text-white px-4 py-2 rounded-md hover:bg-red-800">Add Student</button>
                 </div>
             </form>
         </div>
 
-        <div class="bg-white rounded-lg shadow p-6">
-            <h2 class="text-xl font-semibold mb-4">Student List</h2>
-            <table class="min-w-full divide-y divide-gray-200">
+        <div class="bg-red-100 rounded-lg shadow p-6">
+            <h2 class="text-xl font-semibold text-red-700 mb-4">Student List</h2>
+            <table class="min-w-full divide-y divide-red-200">
                 <thead>
                     <tr>
-                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Student ID</th>
-                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Student Name</th>
-                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Remarks</th>
+                        <th class="px-6 py-3 text-left text-xs font-medium text-red-500 uppercase tracking-wider">Student ID</th>
+                        <th class="px-6 py-3 text-left text-xs font-medium text-red-500 uppercase tracking-wider">Student Name</th>
+                        <th class="px-6 py-3 text-left text-xs font-medium text-red-500 uppercase tracking-wider">Remarks</th>
+                        <th class="px-6 py-3 text-left text-xs font-medium text-red-500 uppercase tracking-wider">Eligibility</th>
                     </tr>
                 </thead>
-                <tbody id="studentTableBody" class="bg-white divide-y divide-gray-200">
+                <tbody id="studentTableBody" class="bg-red-50 divide-y divide-red-200">
                     <!-- Student rows will be added here -->
                 </tbody>
             </table>
@@ -96,6 +97,12 @@
                 const students = JSON.parse(localStorage.getItem('students')) || [];
                 studentTableBody.innerHTML = '';
                 students.forEach((student, index) => {
+                    // Calculate eligibility
+                    const attendancePercentage = window.calculateAttendancePercentage(student.studentId);
+                    const eligibility = attendancePercentage >= 80 ? 'Eligible' : 'Not Eligible';
+
+                    console.log(`Student ID: ${student.studentId}, Attendance %: ${attendancePercentage.toFixed(2)}, Eligibility: ${eligibility}`);
+
                     const tr = document.createElement('tr');
                     tr.innerHTML = `
                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">${student.studentId}</td>
@@ -103,6 +110,7 @@
                         <td class="px-6 py-4 whitespace-nowrap text-sm">
                             <input type="text" data-index="${index}" class="remarksInput border border-gray-300 rounded-md p-1 w-full" value="${student.remarks || ''}" placeholder="Add remarks" />
                         </td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 font-semibold">${eligibility}</td>
                     `;
                     studentTableBody.appendChild(tr);
                 });
